# OctoPlay

./: CMakeLists.txt  Chip8.cpp  Chip8.h  GUI.cpp  GUI.h  Type.h  main.cpp  vcpkg.json
